# internal/handlers/errors.go
@@ -1,0 +1,10 @@
+package handlers
+
+import "errors"
+
+var (
+	ErrInvalidToken     = errors.New("invalid token")
+	ErrInvalidSolution  = errors.New("invalid solution")
+	ErrUserNotFound     = errors.New("user not found")
+	ErrInvalidChallenge = errors.New("invalid challenge")
+)
